Fixed problem with path of System.Data.SQLite.dll in local ~/.nuget directory

--- a/product/roundhouse.databases.sqlite/roundhouse.databases.sqlite.csproj
+++ b/product/roundhouse.databases.sqlite/roundhouse.databases.sqlite.csproj
@@ -63,7 +63,7 @@
         <None Include="App.config"/>
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="$(NuGetPackageRoot)System.Data.SQLite\1.0.84\lib\net45\System.Data.SQLite.dll">
+        <EmbeddedResource Include="$(NuGetPackageRoot)System.Data.SQLite.Core\1.0.105.2\lib\net45\System.Data.SQLite.dll">
             <Link>assemblyresource\System.Data.SQLite.dll</Link>
         </EmbeddedResource>
     </ItemGroup>
